--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: 
-published: true
+permalink: null
+published: false
 ---
 
 
@@ -13,4 +13,3 @@ Protagonists are genuine, caring people who talk the talk and walk the walk, and
 ![]({{site.baseurl}}/emilypmendez.github.io/images/protag-full-profile.png)
 
 _**ENFJ-A** (extraverted, intuitive, feeling, judging, assertive) are abbreviations used in the publications of the [Myers-Briggs Type Indicator (MBTI)](https://www.cpp.com/products/mbti/index.aspx) to refer to [one of the 16 psychological types](https://www.16personalities.com/personality-types)._
-
