--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ published: true
   <div>
     <title>Welcome to the melting pot...</title>
       <h3>I'm cooking up some really cool projects here
-        in the <a href="">#1 Tech City</a> in the USA!</h3>
+        in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA!</h3>
   </div>
   
     {% for post in site.posts %}
