Provided link update to Tech City article and required open target link in new tab.
Also included featured projects.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@ published: true
 <div class="posts">
 
   <div>
-    <title>Welcome to the melting pot...</title>
       <h3>I'm cooking up some really cool projects here
-        in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA!</h3>
+        in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA.</h3><br />
+    <p>Check out my Projects page for some of my work samples.<br />
+    <br />
+      Featured projects include: <br />
+    <br />
+      * Blockchain
+      * Artificial Intelligence
+      * JAM Stack (JavaScript, APIs, & Markup)
+      * MEAN Stack (MongoDB, Express.js, AngularJS, Node.js)
+      * There's always more...
+    </p>
   </div>
   
     {% for post in site.posts %}
