--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ published: true
     <br />
       * Blockchain
       * Artificial Intelligence
-      * JAM Stack (JavaScript, APIs, & Markup)
-      * MEAN Stack (MongoDB, Express.js, AngularJS, Node.js)
+      * <a href="https://jamstack.org/" target="_blank">JAM Stack</a> (JavaScript, APIs, & Markup)
+      * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)
       * There's always more...
     </p>
   </div>
