Provided link update to Tech City article and required open target link in new tab.
Also included featured projects with links.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ published: true
 
   <div>
       <h3>I'm cooking up some really cool projects here
-        in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA.</h3><br />
+        in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA.</h3>
     <p>Check out my Projects page for some of my work samples.<br />
     <br />
       Featured projects include: <br />
     <br />
-      * Blockchain
-      * Artificial Intelligence
-      * <a href="https://jamstack.org/" target="_blank">JAM Stack</a> (JavaScript, APIs, & Markup)
-      * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)
-      * There's always more...
-    </p>
+      * Blockchain<br />
+      * Artificial Intelligence<br />
+      * <a href="https://jamstack.org/" target="_blank">JAM Stack</a> (JavaScript, APIs, & Markup)<br />
+      * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)<br />
+      * There's always more...<br />
+    </p><br />
   </div>
   
     {% for post in site.posts %}
