Added container, title, adjustment of headline texts

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@ published: true
     <h4>I'm cooking up some really cool projects here
       in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA.</h4>
     
-    <p>Check out my Projects page for some of my work samples.<br />
-      
-      <br />
-      Featured projects include: <br />
+    <p>Featured projects include: <br />
       <br />
       * Blockchain<br />
       * Artificial Intelligence<br />
