--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ published: true
       * <a href="https://jamstack.org/" target="_blank">JAM Stack</a> (JavaScript, APIs, & Markup)<br />
       * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)<br />
       * There's always more...<br />
+      
+      {% include button.html url="/projects" %}
     </p><br />
     </container>
   </div>
