--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ published: true
       * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)<br />
       * There's always more...<br />
       
-      {% include button.html url="/projects" %}
+      {% include button.html.about %}
+      {% include button.html.projects %}
     </p><br />
     </container>
   </div>
