--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ published: true
       * <a href="http://mean.io/" target="_blank">MEAN Stack</a> (MongoDB, Express.js, AngularJS, Node.js)<br />
       * There's always more...<br />
       
-      {% include button.html.about %}
-      {% include button.html.projects %}
+      {% include button.html button_name="About Me" button_class="primary" %}
+      
+      {% include button.html button_name="Projects" button_class="primary" %}      
     </p><br />
     </container>
   </div>
