--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ published: true
     <container>
     <h1>Human: Innovation. Integrity. Impact.</h1>
     <h3>Artificial Intelligence | Blockchain | FinTech</h3>
-    
+    <br />
+    <img src="/images/protag-short-profile.png"><br />
+    <br />
     <h5>I'm cooking up some really cool projects here
       in the <a href="https://www.cbsnews.com/media/americas-top-10-tech-cities-arent-on-the-coasts/2/" target="_blank">#1 Tech City</a> in the USA.</h5>
     
